k8s/app/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: certifypro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: certifypro-discovery:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: certifypro
spec:
  selector:
    app: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
